// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render with 50% width when isWide is true 1`] = `
<button
  className="button wide"
  id="button-0"
  style={
    Object {
      "backgroundColor": "grey",
    }
  }
  type="button"
>
  0
</button>
`;

exports[`Button component should render with grey background color 1`] = `
<button
  className="button"
  id="button-+"
  style={
    Object {
      "backgroundColor": "grey",
    }
  }
  type="button"
>
  +
</button>
`;

exports[`Button component should render with orange default background color 1`] = `
<button
  className="button"
  id="button-0"
  style={
    Object {
      "backgroundColor": "orange",
    }
  }
  type="button"
>
  0
</button>
`;
